# orion-viewer

./: .gitattributes  .gitignore  .gitmodules  AndroidManifest.xml  ChangeLog  README  README.md  TODO  build.gradle  build.xml  djvu.patch  gradle.properties  licence.txt  local.properties  local.properties.sample  project.gradle  project.properties  settings.gradle  thirdparty_build.gradle  thirdparty_download.gradle  thirdparty_update.gradle
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gradle-wrapper-validation.yml  main.yml
.github/workflows/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.github/workflows/config/: action.yml
HoloEverywhere/addons/preferences/: build.gradle  build.xml
appcompat/: build.xml
common/: build.gradle
common/src/androidLibMain/: AndroidManifest.xml
common/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
mupdf/android/jni/: Android.mk  Application.mk  Core.mk  Core2.mk  ThirdParty.mk  mupdf.c
native/: build.gradle  native.build.gradle
nativeLibs/: README
nativeLibs/common/: common_header.h  list.c  list.h  orion_bitmap.c  orion_bitmap.h
nativeLibs/djvuModule/: build.gradle
nativeLibs/djvuModule/cmake/: CMakeLists.txt
nativeLibs/djvuModule/jni/: Android.mk  Application.mk  Core.mk  djvu.c  djvu.h
nativeLibs/mupdfModule/: build.gradle
nativeLibs/mupdfModule/jni/: Android.mk  Application.mk  CMakeLists.txt  ThirdParty.mk  mupdf.c  mupdf_native.c
orion-tests/: AndroidManifest.xml  ant.properties  build.xml
orion-viewer/: AndroidManifest.xml  ChangeLog  LICENSE  build.gradle  local.properties.sample  multiDexKeep.pro  proguard-rules.pro  project.properties  version.gradle  version.properties
orion-viewer/assets/: about.html
orion-viewer/jni/: README
orion-viewer/jni/common/: list.c  orion_bitmap.c
orion-viewer/jni/mupdf/: Android.mk  Application.mk  Core.mk  ThirdParty.mk  mupdf.c
orion-viewer/res/layout/: add_bookmark.xml  alex_file_manager.xml  android_about.xml  android_dialog.xml  android_dialog_animator.xml  android_file_manager.xml  android_general_help.xml  bookmark_entry.xml  bookmarks.xml  crops_even.xml  device_info.xml  dialog_slider.xml  epd.xml  file_entry.xml  key_binder.xml  nook_bookmarks.xml  nook_file_manager.xml  nook_help.xml  nook_main.xml  nook_page_seeker.xml  nook_preferences.xml  outline_entry.xml  outline_header.xml  page_layout.xml  search_dialog_int.xml  select_book_item.xml  tap.xml  text_actions.xml
orion-viewer/res/layout-sw600dp/: android_dialog.xml
orion-viewer/res/menu/: bookmarks_menu.xml  file_manager_menu.xml  menu.xml
orion-viewer/res/values/: action_code.xml  actions.xml  arrays.xml  attrs.xml  help.xml  langs.xml  menu.xml  messages.xml  pref.xml  strings.xml  theme.xml
orion-viewer/res/values-de/: actions.xml  exceptions.xml  help.xml  langs.xml  menu.xml  pref.xml  strings.xml
orion-viewer/res/values-es/: actions.xml  help.xml  pref.xml
orion-viewer/res/values-fr/: actions.xml  exceptions.xml  help.xml  langs.xml  menu.xml  messages.xml  pref.xml  strings.xml
orion-viewer/res/values-it/: actions.xml  help.xml  langs.xml  pref.xml
orion-viewer/res/values-iw/: actions.xml  help.xml  menu.xml  pref.xml  strings.xml
orion-viewer/res/values-ru/: actions.xml  help.xml  langs.xml  menu.xml  messages.xml  pref.xml  strings.xml
orion-viewer/res/values-ua/: actions.xml  help.xml  menu.xml  pref.xml
orion-viewer/res/values-zh/: actions.xml  help.xml  menu.xml  pref.xml
orion-viewer/res/xml/: book_preference.xml  userpreferences.xml
orion-viewer/src/androidTest/: AndroidManifest.xml
orion-viewer/src/main/: AndroidManifest.xml
orion-viewer/thirdparty_licenses/: MUPDF.txt  zlib.txt
orion_viewer/: AndroidManifest.xml  ChangeLog  LICENSE  ant.properties  build.xml  build_alex.xml  default.properties  local.properties  local.properties.sample  project.properties
orion_viewer/assets/: about.html
orion_viewer/jni/: document.c  orion_bitmap.c
orion_viewer/res/layout/: actions_selection.xml  add_bookmark.xml  alex_file_manager.xml  alex_main.xml  android_about.xml  android_dialog.xml  android_file_manager.xml  android_general_help.xml  android_main.xml  binded_key.xml  bookmark_book_list.xml  bookmark_entry.xml  bookmarks.xml  crops.xml  crops_even.xml  device_info.xml  epd.xml  file_entry.xml  key_binder.xml  nook_bookmarks.xml  nook_file_manager.xml  nook_help.xml  nook_main.xml  nook_page_seeker.xml  nook_preferences.xml  nook_template.xml  outline_entry.xml  page_layout.xml  page_layout_pref.xml  select_book_item.xml  select_book_item_multi.xml  tap.xml  text_actions.xml  text_selector.xml
orion_viewer/res/layout-land/: android_help.xml  file_manager.xml
orion_viewer/res/layout-port/: android_help.xml  file_manager.xml
orion_viewer/thirdparty_licenses/: ijg.txt  openjpeg.txt
res/layout/: actions_selection.xml  add_bookmark.xml  alex_file_manager.xml  alex_main.xml  android_about.xml  android_dialog.xml  android_file_manager.xml  android_general_help.xml  android_main.xml  bookmark_entry.xml  bookmarks.xml  crop.xml  crops.xml  crops_even.xml  device_info.xml  epd.xml  file.xml  file_entry.xml  file_manager.xml  help.xml  key_binder.xml  main.xml  navigation.xml  nook_bookmarks.xml  nook_file_manager.xml  nook_help.xml  nook_main.xml  nook_page_seeker.xml  nook_preferences.xml  options.xml  page_layout.xml  tap.xml  zoom_Spinner.xml
res/layout-land/: file_manager.xml
res/layout-port/: file_manager.xml
res/menu/: bookmarks_menu.xml  file_manager_menu.xml  menu.xml
res/values/: action_code.xml  actions.xml  arrays.xml  attrs.xml  help.xml  menu.xml  pref.xml  strings.xml
res/values-ru/: actions.xml  help.xml  menu.xml  pref.xml  strings.xml
res/xml/: userpreferences.xml
themissingtabwidget-0.2/: AndroidManifest.xml  build.gradle  build.xml  local.properties  project.properties
thirdparty_licenses/: DjVuLibre.txt  MUPDF.txt  freetype.txt  jbig2dec.txt  nookdevs.txt  themissingtabwidget.txt
tree-view-list-android/: AndroidManifest.xml  build.gradle
utils/: adbrun.sh  svg2png.sh
(+1092 files in other folders)
